Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.7
-
Fix Version/s: 10.2.9
-
Component/s: Optimizer - Window functions
-
Labels:None
-
Environment:CentOS 7
Description
Either of the following Windowing function constructs do not get an error but crash the server:
– Case 1
SUM( CASE WHEN
SUM( CASE WHEN
AND
SUM( CASE WHEN {test}
THEN 1 ELSE 0 END ) OVER ( PARTITION BY
{field} ) > 0THEN 1
ELSE 0
END
)
– Case 2
SUM( IF( SUM( IF( {test}, 1 , 0 ) ) OVER ( PARTITION BY {field}
) > 0 AND SUM( IF(
{test}, 1 , 0 ) ) OVER ( PARTITION BY
{field}) > 0,1, 0 ) )
Attachments
Issue Links
- relates to
-
MDEV-13552 Bug: Server Shutsdown when using LEAD Window Function within a CASE Function
-
- Closed
-